# RoboWorld2018_MobileHubo

./: README.md
hubo_slam/: CMakeLists.txt  README.md  package.xml
hubo_slam/configuration_files/: assets_writer_hubo_3d.lua  hubo_2d.lua  hubo_2d.rviz  hubo_2d_localization.lua  hubo_2d_planning.rviz  hubo_3d.lua  hubo_3d.rviz  hubo_3d_localization.lua
hubo_slam/launch/: assets_writer_hubo_3d.launch  demo_hubo_2d.launch  demo_hubo_2d_localization.launch  demo_hubo_3d.launch  demo_hubo_3d_localization.launch  hubo_2d.launch  hubo_3d.launch  offline_hubo_3d.launch  pathplan_2d.launch  record.launch
hubo_slam/urdf/: hubo_3d.urdf
mobileHubo_visionPC/: .bashrc  README.md  hostname  hosts
mobileHubo_visionPC/conv_str_Scenario/: 2_slam.sh  2_slam_map.sh  3_object_detector.sh  5_communication.sh  README_ editting bashrc  fsm.sh  object_detector2.sh  realsense_on.sh  slam.sh  tablet.sh
mobileHubo_visionPC/drc_hubo_sensorpack/: CMakeLists.txt  package.xml
mobileHubo_visionPC/drc_hubo_sensorpack/include/: RBLANData.h  UserSharedMemory.h  VisionLANData.h
mobileHubo_visionPC/drc_hubo_sensorpack/launch/: data_grab.launch  imgui.ini
mobileHubo_visionPC/drc_hubo_sensorpack/msg/: Planning_command.msg  Planning_data.msg
mobileHubo_visionPC/drc_hubo_sensorpack/src/: doneinput.py  drc_hubo_sensorpack_node.cpp  fsm_robotworld.py  ros_podo_node.cpp  userinput.py
motionPC_omniwheel_robotworld/: README.md  build.sh
motionPC_omniwheel_robotworld/__ModelBuild/: Makefile
motionPC_omniwheel_robotworld/exe/: Core_Config.db  Core_Config_Traube2.db  Daemon  Daemon.debug  DeviceManager  PODOLauncher  command  dataDaemon.txt  omni.m  test-red.out  untit3led.m  untitled.m  wheelinfo.m
motionPC_omniwheel_robotworld/exe/configs/: FingerConfig.ini.XM2119  LauncherConfig.ini  LauncherConfig.ini.sc1853  LauncherConfig.ini.yJ2126
motionPC_omniwheel_robotworld/share/: Friction.txt  Friction_DRC1.txt
motionPC_omniwheel_robotworld/share/Gain/: Gd50.txt  Gd55.txt  Gd58.txt  Gd59.txt  Gd61.txt  Gd72.txt  Gd73.txt  Gd76.txt  Gd77.txt  Gd79.txt  Gd80.txt  Gd81.txt  Gi50.txt  Gi52.txt  Gi53.txt  Gi54.txt  Gi55.txt  Gi56.txt  Gi62.txt  Gi70.txt  Gi71.txt  Gi72.txt  Gi73.txt  Gi74.txt  Gi75.txt  (+14 more)
motionPC_omniwheel_robotworld/src/: CMakeLists.txt
motionPC_omniwheel_robotworld/src/ALPrograms/: ALPrograms.pro  ALPrograms.pro.user.03b803c  ALPrograms.pro.user.2dd22eb  ALPrograms.pro.user.55da8ba  ALPrograms.pro.user.75f4a0e  ALPrograms.pro.user.7941cce  CMakeLists.txt
motionPC_omniwheel_robotworld/src/ALPrograms/ManualMove/: BaseJoint.h  BasicMatrix.h  BasicTrajectory.cpp  CMakeLists.txt  ManualCAN.cpp  ManualCAN.h  ManualMove.h  ManualMove.pro  MotionChecker.cpp  MotionChecker.h  RBLog.h  WMupperbody.pro  joint.cpp  joint.h  main.cpp  taskGeneral.h  taskmotion.cpp  taskmotion.h
motionPC_omniwheel_robotworld/src/ALPrograms/ManualMove/BasicFiles/: BasicSetting.h
motionPC_omniwheel_robotworld/src/ALPrograms/ManualMove/JoyStick/: RBJoystick.cpp  joystickclass.h  joystickvariable.h
motionPC_omniwheel_robotworld/src/ALPrograms/PODOLAN/: CMakeLists.txt  CoreThread.cpp  CoreThread.h  PODOLAN.pro  PODOServer.cpp  PODOServer.h  ROSThread.cpp  main.cpp
motionPC_omniwheel_robotworld/src/ALPrograms/RobotWorld/: CMakeLists.txt  Drinkstock.cpp  Drinkstock.h  MainHeader.h  RobotWorld.pro  main.cpp
motionPC_omniwheel_robotworld/src/ALPrograms/RobotWorld/BasicFiles/: ManualCAN.h  joint.cpp  joint.h  taskGeneral.h  taskmotion.cpp  taskmotion.h
motionPC_omniwheel_robotworld/src/ALPrograms/WalkReady/: CMakeLists.txt  WalkReady.pro  joint.h  main.cpp
motionPC_omniwheel_robotworld/src/PODOGUI/: CMakeLists.txt  CommonHeader.h  GUIMainWindow.cpp  GUIMainWindow.h  GUIMainWindow.ui  PODOGUI.pro  PODOGUI.pro.user.03b803c  PODOGUI.pro.user.2dd22eb  PODOGUI.pro.user.55da8ba  PODOGUI.pro.user.75f4a0e  PODOGUI.pro.user.7941cce  RobotWorldDialog.cpp  RobotWorldDialog.h  RobotWorldDialog.ui  TutorialDialog.cpp  TutorialDialog.h  TutorialDialog.ui  cartaskdialog.cpp  cartaskdialog.h  cartaskdialog.ui  joystickdialog.cpp  joystickdialog.h  joystickdialog.ui  omniwheeldialog.cpp  omniwheeldialog.h  omniwheeldialog.ui  walkingdialog.cpp  walkingdialog.h  walkingdialog.ui
motionPC_omniwheel_robotworld/src/PODOGUI/BasicFiles/: JointDialog.cpp  JointDialog.ui  LANDialog.cpp  LANDialog.h  ModelDialog.cpp  PODOALDialog.cpp  RBDataType.h  SensorDialog.cpp  SensorDialog.h  SensorDialog.ui  SettingDialog.cpp  SettingDialog.h  SettingDialog.ui
motionPC_omniwheel_robotworld/src/PODOGUI/JoyStick/: RBJoystick.cpp
motionPC_omniwheel_robotworld/src/__Daemon/: CMakeLists.txt  Daemon.pro  Daemon.pro.user.03b803c  Daemon.pro.user.2dd22eb  Daemon.pro.user.55da8ba  Daemon.pro.user.75f4a0e  Daemon.pro.user.7941cce  ExternHeader.h  JointInformation.h  RBCAN.cpp  RBCAN.h  RBDataBase.cpp  RBDataType.h  RBFOGSensor.cpp  RBFOGSensor.h  RBFTSensor.cpp  RBFTSensor.h  RBIMUSensor.cpp  RBIMUSensor.h  RBMotorController.cpp  RBMotorController.h  RBOpticFlowSensor.cpp  RBOpticFlowSensor.h  RBProcessManager.cpp  RBProcessManager.h  RBRawLAN.cpp  RBRawLAN.h  RBSmartPower.cpp  RBSmartPower.h  main.cpp
motionPC_omniwheel_robotworld/src/__DeviceManager/: CMakeLists.txt  DeviceManager.pro  MainWindow.cpp  MainWindow.h  MainWindow.ui  Panel_FT.cpp  Panel_FT.h  Panel_FT.ui  Panel_MC.cpp  Panel_MC.h  Panel_MC.ui  RBCAN.cpp  RBCAN.h  RBDataType.h  RBFTSensor.cpp  RBGraph.cpp  RBGraph.h  RBGraph.ui  RBMotorController.cpp  RBMotorController.h
motionPC_omniwheel_robotworld/src/__PODOLauncher/: CMakeLists.txt  LauncherDialog.cpp  LauncherDialog.h  LauncherDialog.ui  PODOLauncher.pro  PODOLauncher.pro.user.03b803c  PODOLauncher.pro.user.55da8ba  PODOLauncher.pro.user.75f4a0e  PODOLauncher.pro.user.7941cce  main.cpp
object_detector_install/: Dockerfile  README.md  attach_hubo_docker.sh  imgui.ini  ros_entrypoint.sh  run_hubo_docker.sh  run_me.sh
order_handler/: README.md  Readme.txt
order_handler/ROS_ver4/: CMakeLists.txt  package.xml
order_handler/ROS_ver4/msg/: workDone.msg
order_handler/ROS_ver4/src/: order_publisher.cpp  order_subscriber.cpp
(+19 files in other folders)
