<?xml version="1.0"?>
<package format="2">
  <name>drc_hubo_sensorpack</name>
  <version>0.0.0</version>
  <description>The drc_hubo_sensorpack package</description>
  <maintainer email="rainbow@todo.todo">rainbow</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>object_detector</build_depend>
  <build_depend>smach</build_depend>

  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>object_detector</build_export_depend>
  <build_export_depend>smach</build_export_depend>

	
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>object_detector</exec_depend> 
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>smach</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
