set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/build/ALBuild/PODO_PROC_Build)
add_subdirectory(WalkReady)
add_subdirectory(OmniWheel)
add_subdirectory(ManualMove)
add_subdirectory(FreeWalking)
add_subdirectory(CarTask)
add_subdirectory(PODOLAN)
add_subdirectory(DemoFireAL)
add_subdirectory(ALTutorial)
add_subdirectory(ALNRL)
add_subdirectory(DRCWheel)